authorization and friendly forwarding

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,3 +3,8 @@ bond:
   name: James Bond
   email: bond@example.gov
   password_digest: <%= User.digest('password') %>
+  
+archer:
+  name: Sterling Archer
+  email: mamasboy@example.gov
+  password_digest: <%= User.digest('password') %>
