--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,6 +3,7 @@ bond:
   name: James Bond
   email: bond@example.gov
   password_digest: <%= User.digest('password') %>
+  admin: true
   
 archer:
   name: Sterling Archer
